Update image paths to use relative URLs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main">
         <nav>
-            <span><img src="logo.svg" alt=""></span>
+            <span><img src="./logo.svg" alt=""></span>
             <ul>
                 <button class="One">English</button>
                 <button class="Two">Sign in</button>
@@ -41,16 +41,16 @@
             </div>
 
             <div class="showsscrollbar">
-                <li><img class="shows" src=image1.jpg" alt="error"></li>
-                <li><img class="shows" src=image2.jpg" alt="error"></li>
-                <li><img class="shows" src=image3.jpg" alt="error"></li>
-                <li><img class="shows" src=image44.jpg" alt="error"></li>
-                <li><img class="shows" src=image5.jpg" alt="error"></li>
-                <li><img class="shows" src=image6.jpg" alt="error"></li>
-                <li><img class="shows" src=image7.jpg" alt="error"></li>
-                <li><img class="shows" src=image8.jpg" alt="error"></li>
-                <li><img class="shows" src=image9.jpg" alt="error"></li>
-                <li><img class="shows" src=iamge10.jpg" alt="error"></li>
+                <li><img class="shows" src="./image1.jpg" alt="error"></li>
+                <li><img class="shows" src="./image2.jpg" alt="error"></li>
+                <li><img class="shows" src="./image3.jpg" alt="error"></li>
+                <li><img class="shows" src="./image44.jpg" alt="error"></li>
+                <li><img class="shows" src="./image5.jpg" alt="error"></li>
+                <li><img class="shows" src="./image6.jpg" alt="error"></li>
+                <li><img class="shows" src="./image7.jpg" alt="error"></li>
+                <li><img class="shows" src="./image8.jpg" alt="error"></li>
+                <li><img class="shows" src="./image9.jpg" alt="error"></li>
+                <li><img class="shows" src="./iamge10.jpg" alt="error"></li>
             </div>
 
 
